--- a/src/Pages/Products.css
+++ b/src/Pages/Products.css
@@ -58,4 +58,17 @@
   .products__list {
     grid-template-columns: 1fr;
   }
+  .emptyResult {
+    text-align: center;
+    font-size: 12px;
+    color: #aaa;
+  }
+  .products__header h1 {
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    color: rgb(231, 157, 19);
+    font-size: 1.5rem;
+    margin: 2rem 0 1rem 0rem;
+  }
 }
