--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -19,7 +19,7 @@
 
 .contact-body img:nth-child(2) {
     width: 500px;
-    position: absolute;
+    position: absolute; 
     top: 300px;
     left: -220px;
     opacity: .2;
@@ -127,4 +127,37 @@ input:focus {
 
 .names input {
     width: 50%;
+}
+
+@media(max-width: 540px){
+    .contact-body{
+        height: 80vh;
+    }
+    .contact-us {
+        padding: 2rem 1rem;
+        width: 90%;
+        background: #f9f9f9;
+        box-shadow: 0px 20px 40px rgba(128, 128, 128, 0.3);
+        border-radius: 10px;
+        /* margin: 5rem auto 5rem auto; */
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .contact-us h2 {
+        font-size: 30px;
+        color: rgb(29, 29, 29);
+        text-align: center;
+        margin: 0 0 2rem 0;
+    
+    }
+    .contact-us {
+        font-size: 13px;
+        color: rgb(29, 29, 29);
+        text-align: center;
+        margin: 0 0 1rem 0;
+        
+    }
+ 
 }
