adjusted the fr=eatures section

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -203,7 +203,7 @@
         margin: 0 0 3rem 0
     }
     .features{
-        padding: 0 0 2rem 0;
+        padding: 5rem 0 2rem 0;
     }
     
     .feat-cont h3 {
