--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -40,6 +40,11 @@
  }
 
 
+.side-bar {
+    display: none;
+}
+
+
  @media (max-width: 540px){
     .logo a {
         font-weight: 700;
@@ -57,5 +62,49 @@
     }
     .bars-div{
         display: block;
+    }
+   
+    
+
+
+
+
+
+/* ---------------------------------------------------------------------side bar */
+    .side-bar {
+        display: block;
+        height: 40vh;
+        width: 140px;
+        position: absolute;
+        top: 0;
+        right: -145px;
+        background: #f5f5f5;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        border-bottom-left-radius: 10px;
+        padding: 1rem;
+        z-index: 300;
+        transition: .2s ease all;
+    }
+    
+    .active {
+        right: 0px;
+    }
+    
+    .side-links {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin: 2rem 0 0 0;
+    
+    }
+    
+    .side-bar h1 {
+        color: rgb(231, 157, 19);
+    
+    }
+    
+    .side-links li {
+        border-bottom: 0.5px rgba(0, 0, 0, 1) solid;
+    
     }
  }
