--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -74,20 +74,16 @@
     .side-bar {
         display: block;
         height: 40vh;
-        width: 140px;
+        width: 0px;
         position: absolute;
+        overflow: hidden;
         top: 0;
-        right: -145px;
+        right: 0px;
         background: #f5f5f5;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         border-bottom-left-radius: 10px;
-        padding: 1rem;
         z-index: 300;
         transition: .2s ease all;
-    }
-    
-    .active {
-        right: 0px;
     }
     
     .side-links {
