--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,48 +1,93 @@
 .footer-body {
-    background: rgb(29, 29, 29);
-    padding: 5rem 0 0rem 0;
+  background: rgb(29, 29, 29);
+  padding: 5rem 0 0rem 0;
 }
 
 .footer-logo {
-    color: rgb(231, 157, 19);
-    flex: 2;
+  color: rgb(231, 157, 19);
+  flex: 2;
 }
 
 .footer-logo a {
-    font-weight: 700;
-    color: rgb(231, 157, 19);
-    font-size: 20px;
-    cursor: pointer;
-    width: fit-content;
-    text-decoration: none;
+  font-weight: 700;
+  color: rgb(231, 157, 19);
+  font-size: 20px;
+  cursor: pointer;
+  width: fit-content;
+  text-decoration: none;
 }
 
 .footer-logo a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-
 .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 3rem;
+  /* background: yellow; */
+}
+
+.links {
+  flex: 1;
+  border-left: 0.5px #555 solid;
+  height: fit-content;
+  padding-left: 3rem;
+}
+
+.details {
+  padding-left: 3rem;
+  border-left: 0.5px #555 solid;
+}
+
+.copy {
+  text-align: center;
+  margin: 5rem 0 0 0;
+  width: 100%;
+  color: #555;
+  background: #111;
+  padding: 1rem 0;
+  font-size: 12px;
+}
+
+.copy a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.copy a:hover {
+  color: rgb(231, 157, 19);
+  text-decoration: underline;
+}
+
+@media (max-width: 540px) {
+  .footer {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: start;
     gap: 3rem;
     /* background: yellow; */
-}
-
-.links {
+  }
+  .links {
     flex: 1;
-    border-left: .5px #555 solid;
     height: fit-content;
-    padding-left: 3rem;
-}
-
-.details{
-    padding-left: 3rem;
-    border-left: .5px #555 solid;
-}
-
-.copy {
+    border: none;
+    padding: 0;
+    font-size: 12px;
+  }
+  .links a {
+    font-size: 12px;
+  }
+  .details {
+    border: none;
+    padding: 0;
+  }
+  .details a {
+    font-size: 12px;
+  }
+  .copy {
     text-align: center;
     margin: 5rem 0 0 0;
     width: 100%;
@@ -50,55 +95,9 @@
     background: #111;
     padding: 1rem 0;
     font-size: 12px;
-}
-
-.copy a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.copy a:hover {
-    color: rgb(231, 157, 19);
-    text-decoration: underline;
-}
-
-@media(max-width: 540px){
-    .footer {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: start;
-        gap: 3rem;
-        /* background: yellow; */
-    }
-    .links{
-        flex: 1;
-        height: fit-content;
-        border: none;
-        padding: 0;
-        font-size: 12px;
-    }
-    .links a{
-        font-size: 12px;
-    }
-    .details{
-        border: none;
-        padding: 0;
-    }
-    .details a{
-        font-size: 12px;
-    }
-    .copy{
-        text-align: center;
-        margin: 5rem 0 0 0;
-        width: 100%;
-        color: #555;
-        background: #111;
-        padding: 1rem 0;
-        font-size: 12px;
-    }
-    .copy p{
-        width: 70%;
-        margin: auto;
-    }
+  }
+  .copy p {
+    width: 70%;
+    margin: auto;
+  }
 }
