--- a/src/components/Testimonials/testimonials.css
+++ b/src/components/Testimonials/testimonials.css
@@ -1,152 +1,150 @@
 .testimonials-body {
-    line-height: 0;
-    background: #f5f5f5;
-    padding-top: 5rem;
+  line-height: 0;
+  background: #f5f5f5;
+  padding-top: 5rem;
 }
- 
+
 .testi {
-    font-family: serif;
-    font-size: 20px;
-    color: rgb(231, 157, 19);
-    margin: 0rem 0 0rem 0;
+  font-family: serif;
+  font-size: 20px;
+  color: rgb(231, 157, 19);
+  margin: 0rem 0 0rem 0;
 }
 
 .testi-h2 {
-    font-size: 40px;
-    color: rgb(29, 29, 29);
-    text-align: left;
-    margin: 3rem 0rem 2rem 0rem;
-    line-height: 40px;
-    width: 80%
+  font-size: 40px;
+  color: rgb(29, 29, 29);
+  text-align: left;
+  margin: 3rem 0rem 2rem 0rem;
+  line-height: 40px;
+  width: 80%;
 }
 
 .testi-cont {
-    /* background:rgb(231, 157, 19); */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 95%;
-    margin: auto;
-    padding: 0 1rem 5rem 1rem;
+  /* background:rgb(231, 157, 19); */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 95%;
+  margin: auto;
+  padding: 0 1rem 5rem 1rem;
 }
 
 .testi-client {
-    font-size: 17px;
+  font-size: 17px;
 }
 
 .bout-content {
-    line-height: 20px;
-
+  line-height: 20px;
 }
 
 .btn-light-o {
-    padding: .5rem;
-    margin: 0rem 1rem 0 0;
-    border-radius: 50%;
-    border: 2px rgb(231, 157, 19) solid;
-    font-family: 'Poppins', sans-serif;
-    background: none;
-    color: rgb(231, 157, 19);
-    font-weight: 500;
-    transition: .2s ease all;
+  padding: 0.5rem;
+  margin: 0rem 1rem 0 0;
+  border-radius: 50%;
+  border: 2px rgb(231, 157, 19) solid;
+  font-family: "Poppins", sans-serif;
+  background: none;
+  color: rgb(231, 157, 19);
+  font-weight: 500;
+  transition: 0.2s ease all;
 }
 
 .btn-light-o:hover {
-    color: rgb(255, 255, 255);
-    border: 2px rgb(231, 157, 19) solid;
-    background: rgb(231, 157, 19);
+  color: rgb(255, 255, 255);
+  border: 2px rgb(231, 157, 19) solid;
+  background: rgb(231, 157, 19);
 }
 
 .btn-dark-o {
-    padding: .5rem;
-    border-radius: 50%;
-    border: 2px rgb(231, 157, 19) solid;
-    font-family: 'Poppins', sans-serif;
-    background: rgb(231, 157, 19);
-    transition: .2s ease all;
-    color: #fff;
-    height: 30px;
-    width: 30px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  border: 2px rgb(231, 157, 19) solid;
+  font-family: "Poppins", sans-serif;
+  background: rgb(231, 157, 19);
+  transition: 0.2s ease all;
+  color: #fff;
+  height: 30px;
+  width: 30px;
 }
 
 .btn-dark-o:hover {
-    color: rgb(231, 157, 19);
-    border: 2px rgb(231, 157, 19) solid;
-    background: rgb(255, 255, 255);
+  color: rgb(231, 157, 19);
+  border: 2px rgb(231, 157, 19) solid;
+  background: rgb(255, 255, 255);
 }
 
 .testi-content {
-    font-size: 15px;
-    font-weight: 500;
-    color: rgb(79, 79, 79);
-    line-height: 20px;
-    margin: 0rem 0rem 2rem 0rem;
+  font-size: 15px;
+  font-weight: 500;
+  color: rgb(79, 79, 79);
+  line-height: 20px;
+  margin: 0rem 0rem 2rem 0rem;
 }
 
 .testi-left-cont {
-    width: 48%
+  width: 48%;
 }
 
 .test-content p {
-    line-height: 20px;
-    font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 2rem;
-    text-align: justify;
+  line-height: 20px;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 2rem;
+  text-align: justify;
 }
 
 .bout-content h3 {
-    font-size: 30px;
-    text-decoration: underline;
-    line-height: 5px;
-    margin-bottom: 3rem;
+  font-size: 30px;
+  text-decoration: underline;
+  line-height: 5px;
+  margin-bottom: 3rem;
 }
 
 .t-image {
-    width: 50%;
-    border: 3px rgb(231, 157, 19) solid;
-    border-radius: 15px;
-    overflow: hidden;
+  width: 50%;
+  border: 3px rgb(231, 157, 19) solid;
+  border-radius: 15px;
+  overflow: hidden;
 }
 
 .t-image img {
-    width: 100%;
+  width: 100%;
 }
 
-@media(max-width: 540px){
-    .testi-cont{
-        width: 100%;
-        padding: 0
-    }
-    .t-image{
-        display: none;
-    }
-    .testi-left-cont {
-        width: 100%;
-        text-align:center ;
-    }
-    .testi-h2 {
-        font-size: 30px;
-        color: rgb(29, 29, 29);
-        text-align: center;
-        margin: 2rem 0rem 2rem 0rem;
-        line-height: 40px;
-        width: 100%;
-    }
-    .testi{
-        text-align: left;
-    }
-    .testi-client{
-        margin: 3rem 0 -7px 0;
-        text-align: right;
-        font-size: 13px;
-    }
-    .testimonials-body {
-        padding: 5rem 0;
-    }
-    .right{
-        text-align: right;
-        font-size: 13px;
-        
-    }
+@media (max-width: 540px) {
+  .testi-cont {
+    width: 100%;
+    padding: 0;
+  }
+  .t-image {
+    display: none;
+  }
+  .testi-left-cont {
+    width: 100%;
+    text-align: center;
+  }
+  .testi-h2 {
+    font-size: 30px;
+    color: rgb(29, 29, 29);
+    text-align: center;
+    margin: 2rem 0rem 2rem 0rem;
+    line-height: 40px;
+    width: 100%;
+  }
+  .testi {
+    text-align: left;
+  }
+  .testi-client {
+    margin: 3rem 0 -7px 0;
+    text-align: right;
+    font-size: 13px;
+  }
+  .testimonials-body {
+    padding: 5rem 0;
+  }
+  .right {
+    text-align: right;
+    font-size: 13px;
+  }
 }
