--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -29,7 +29,7 @@
  .navbar{
      display: flex;
      align-items: center;
-     padding: 1rem 10px;
+     padding: 1rem 0px;
      justify-content: space-between;
  }
 
@@ -77,6 +77,22 @@
         width: 0px;
         position: absolute;
         overflow: hidden;
+        top: 0;
+        right: 0px;
+        background: #f5f5f5;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        border-bottom-left-radius: 10px;
+        z-index: 300;
+        transition: .2s ease all;
+    }
+   
+    .side-bar-open {
+        display: block;
+        height: 40vh;
+        width: 140px;
+        position: absolute;
+        overflow: hidden;
+        padding: 1rem;
         top: 0;
         right: 0px;
         background: #f5f5f5;
